[package]
name = "drv8830"
version = "0.1.0"
edition = "2021"

[dependencies]
rppal = { version = "0.18.0", optional = true }
embedded-hal = { version = "1.0.0", optional = true }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
features = ["arduino-uno"]
optional = true

[features]
default = ["rpi"]
rpi = ["dep:rppal", "std"]
std = []
embedded = ["dep:embedded-hal", "dep:arduino-hal"]
